victoria-metrics-operator/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vl-insert
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: 100M
spec:
  ingressClassName: nginx
  rules:
  - host: 172.18.0.0.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vlinsert-example
            port:
              number: 9481
